# GUI_GSP

./: .gitignore  GSP_Chart.c  GSP_Chart.h  GSP_DrawText.c  GSP_DrawText.h  GSP_GUI.c  GSP_Image.c  GSP_Image.h  GSP_JSON.c  GSP_JSON.h  GSP_Keyboard.c  GSP_Keyboard.h  GSP_Label.c  GSP_Label.h  GSP_Langs.c  GSP_Langs.h  GSP_List.c  GSP_List.h  GSP_Message.c  GSP_Message.h  GSP_Panel.c  GSP_Panel.h  GSP_PolyLine.c  GSP_PolyLine.h  GSP_ProgressBar.c  GSP_ProgressBar.h  GSP_Ruler.c  GSP_Ruler.h  GSP_Session.c  GSP_Session.h  GSP_Spinner.c  GSP_Spinner.h  GSP_Table.c  GSP_Table.h  GSP_Timer.c  GSP_Timer.h  GSP_mem_monitor.c  GSP_mem_monitor.h  GUI_GSP.h  MEDIA_AND_LANG_PACK.md  (+6 more)
Config/: GUI_GSP_Config.h
Drivers/: GSP_Driver.c  GSP_Driver.h  GSP_Hardware.c  GSP_Init.c  GSP_Init.h
Examples/dino_game/: Makefile  README.md  dino_game.c  dino_game.h  main.c  main_gsp.c  main_sdl.c
Examples/simple_demo/: Langs.c  Langs.h  README.md  main.c
Examples/simple_demo/Langs_Pack/Langs/EN/: English.json
Fonts/: Fonts.h  lv_font_unscii_8.c  lv_symbol_def.h
Fonts/LVGL/: GSP_lv_font_loader.c  GSP_lvgl.h
Tools/: README.md
dino_game/: .gitignore  CMakeLists.txt  README.md  dino_game.c  dino_game.h  lv_conf.h  lv_drv_conf.h  main.c
winc/: README.md
